--- a/roles/sublime_text/tasks/install-Linux.yaml
+++ b/roles/sublime_text/tasks/install-Linux.yaml
@@ -1,7 +1,12 @@
 ---
+- name: Include OS family variables ({{ ansible_os_family }}).
+  ansible.builtin.include_vars:
+    file: "{{ ansible_system }}-{{ ansible_os_family }}.yaml"
+  when: ansible_system == "Linux"
+
 - name: Include install tasks ({{ ansible_os_family }}).
   ansible.builtin.include_tasks:
-    file: install-{{ ansible_os_family }}.yaml
+    file: install-{{ ansible_system }}-{{ ansible_os_family }}.yaml
   when: ansible_system == "Linux"
 
 - name: Install Sublime Text (Linux).
