--- a/roles/nicholaspcole_systems/defaults/main.yaml
+++ b/roles/nicholaspcole_systems/defaults/main.yaml
@@ -1,4 +1,5 @@
 ---
 nicholaspcole_systems_ansible_managed: This file is managed by Ansible. Manual changes may be lost.
+nicholaspcole_systems_default_user: nicholas
 nicholaspcole_systems_user_directory: "{{ ansible_user_dir }}"
 nicholaspcole_systems_scripts_directory: "{{ nicholaspcole_systems_user_directory }}/scripts"
