--- a/playbooks/restart-failed-units.yaml
+++ b/playbooks/restart-failed-units.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Restart failed units.
   hosts: all
-  gather_facts: True
+  gather_facts: true
   tasks:
     - name: Get failed systemd units.
       ansible.builtin.command: systemctl --failed --output json
       when: ansible_system == "Linux"
       register: systemd_failed_units
-      changed_when: False
+      changed_when: true
 
     - name: Restart failed unit(s).
       ansible.builtin.service:
