--- a/playbooks/restart-failed-units.yaml
+++ b/playbooks/restart-failed-units.yaml
@@ -7,7 +7,7 @@
       ansible.builtin.command: systemctl --failed --output json
       when: ansible_system == "Linux"
       register: systemd_failed_units
-      changed_when: true
+      changed_when: false
 
     - name: Restart failed unit(s).
       ansible.builtin.service:
